# project-ui

./: Cargo.toml  README.md  config.example.yml  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml
projects/: esrgan-test.yml
src/: config.rs  iiif.rs  main.css  main.rs  model.rs
src/templates/: base.html  index.html  project.html
