[package]
name = "projects-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
axum-template = { version = "0.8.0", features = ["minijinja"]}
axum = "0.5.17"
tokio = { version = "1.0", features = ["full"] }
minijinja = "0.25.0"
